<resources>
    <string name="app_name">마음 새로고침</string>
    <!--    <string name="home_title">정신차리게 해주는 명언</string>-->
    <string name="home_title">오늘의 새로고침</string>
    <string name="title_bookmark">bookmark</string>
    <string name="title_share">share</string>
    <string name="title_settings">settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_maxim">김연아는 이길 수 없다</string>
    <string name="test_author">- 아사다 마오</string>

    <string name="author_format">- %s</string>
    <string name="title_home">home</string>

    <string name="backButtonMessage">\'뒤로\' 버튼 한번 더 누르면 종료됩니다.</string>
    <string name="basic_info">기본</string>
    <string name="enquire">문의/건의 하기</string>
    <string name="personal_info_policy">개인정보 처리 방침</string>
    <string name="credit">크레딧</string>
    <string name="send_mail">이메일 보내기</string>
    <string name="version_name">버전 %s</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>

    <string name="no_bookmarks">북마크된 명언이 없습니다.\n명언을 더블 클릭하여 북마크에 추가하세요.</string>
    <string name="send_app_link_text">마음 새로고침\n하루에 명언 한 개씩!\n
        "https://play.google.com/store/apps/details?id=xyz.thingapps.thingphrase"</string>

    <string name="mind_oasis_app_android_ko">마음 새로고침 앱 Android</string>
    <string name="all_rights_reserved_ko">Thing Apps All rights reserved</string>
    <string name="personal_info_terms_ko">개인정보 보호 및 약관</string>
    <string name="personal_info_policy_ko">개인정보 처리 방침</string>
    <string name="url_policy">https://thingapps.xyz/phrase_privacy_policy.html</string>
    <string name="share_app">앱 공유하기</string>
    <string name="description_splash_icon">splash icon</string>


    <string name="admob_test_device" translatable="false">C696ECC628516D4352595D6251A997B8</string>

    <string name="admob_test_ad_unit_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_test_ad_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_ad_popup_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>


    <string name="admob_gahlok24_ad_unit_id" translatable="false">ca-app-pub-3820525414951903~8018747206</string>
    <string name="admob_gahlok24_ad_banner_id" translatable="false">ca-app-pub-3820525414951903/6705665537</string>
    <string name="admob_gahlok24_ad_popup_id" translatable="false">ca-app-pub-3820525414951903/9082818375</string>


    <string name="admob_thing_piece_ad_unit_id" translatable="false">ca-app-pub-2372002333209736~8009099769</string>
    <string name="admob_thing_piece_ad_banner_id" translatable="false">ca-app-pub-2372002333209736/8458448481</string>
    <string name="admob_thing_piece_ad_popup_id" translatable="false">ca-app-pub-2372002333209736/9991022007</string>

    <string name="admob_mind_refresh_ad_unit_id" translatable="false">ca-app-pub-3882601283830191~3122961363</string>
    <string name="admob_mind_refresh_ad_banner_id" translatable="false">ca-app-pub-3882601283830191/6451832287</string>
    <string name="admob_mind_refresh_ad_popup_id" translatable="false">ca-app-pub-3882601283830191/7180312798</string>


    <string name="admob_app_id" translatable="false">@string/admob_mind_refresh_ad_unit_id</string>
    <string name="admob_banner_id" translatable="false">@string/admob_mind_refresh_ad_banner_id</string>
    <string name="admob_popup_id" translatable="false">@string/admob_mind_refresh_ad_popup_id</string>

</resources>
